Custom Armor Model support

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ forge = 32.0.97
 
 version_major = 0
 version_api = 0
-version_minor = 20
-version_patch = 0
+version_minor = 21
+version_patch = 0-beta1
