Push main and update access

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@ forge = 32.0.108
 
 version_major = 0
 version_api = 0
-version_minor = 24
-version_patch = 0
+version_minor = 25
+version_patch = 0-beta1
