--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ mappingsChannel = 20200723-1.16.1
 mc = 1.16.1
 forge = 32.0.108
 
-version_major = 0
+version_major = 1
 version_api = 0
-version_minor = 26
-version_patch = 0
+version_minor = 0
+version_patch = 0-rc2
