--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -19,7 +19,7 @@ authors="\u00a7bChampionAsh5357"
 description="
 \u00a76Have you ever wished you could see a mob with some armor on?  Have you ever wanted to see a mob with a head on? Or maybe an arrow stuck to them? \u00a71Entity \u00a7cArmor \u00a7fModels \u00a76allows you to do just that. You can now see entities with armor mappings or arrows sticking in them when they're hit. Best thing is, this mod is only for the client, allowing you to run it regardless of if your modded server has it installed.
 
-This mod is a work in progess. Not all features will be available for all mobs until their rendering has been updated and patched.
+Not all features will be available for all mobs until their rendering has been updated and patched.
 "
 
 [[dependencies.entityarmormodels]]
