Finalize Base Data

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,13 @@ mapping_type = official
 mapping_version = 1.16.5
 
 # Licensing
-license_name = MPL-2.0
+license_name = Mozilla Public License 2.0
 license_url = https://www.mozilla.org/en-US/MPL/2.0/
 
 # Mod Specific
 mod_id = entityarmormodels
 mod_name = Entity Armor Models
 mod_desc = Rendering What Entities Are Wearing
-mod_semver = 0.1.0
-mod_patch = 0
+mod_semver = 2.0.0
+mod_patch = 0-alpha
 mod_hasAccessTransformer = false
